--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,6 +7,9 @@
             <h1><a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a></h1>
             <p>{{ site.description }}</p>
         </div>
+        <div id="site_title_right">
+            <p><a rel="license" href="{{ site.data.links.cc_by_sa }}" target="_blank">Licensed under a <a rel="license" href="{{ site.data.links.cc_by_sa_license }}" target="_blank">Creative Commons Attribution-ShareAlike 4.0 International License</a> (<span class='highlight_cc'>CC BY-SA</span>). You are free to copy, reproduce, distribute, display, and make adaptations but you must provide proper attribution.</p>
+        </div>
     </div>
     
     {% include socmed_links.html %}
