--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -30,9 +30,11 @@ layout: default
 
     {% if page.video != nil %}
         <div class="video">
+            <p class="video_link"><span>Link to video:</span><br/><a href="https://www.youtube.com/watch?v={{ page.video}}">https://www.youtube.com/watch?v={{ page.video}}</a></p>
             <iframe width="{{ site.data.youtube.width }}" height="{{ site.data.youtube.height }}" src="https://www.youtube.com/embed/{{ page.video}}" frameborder="0"></iframe>
             <p class="attribution">&nbsp;— video courtesy of {{ page.videoref }}</p>
         </div>
+    {% else %}
     {% endif %}
     
     {{ content }}
