--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -77,7 +77,7 @@ hr {
     &.thin {
         height: 1px;
         margin-top: 20px;
-        margin-bottom: 17px;
+        margin-bottom: 20px;
     }
 
     &.compact {
@@ -1197,6 +1197,28 @@ section.post_column_main {
                     padding: 2px 8px 4px 8px;
                     border-radius: 2px;
                     margin-right: 5px;
+                }
+            }
+        }
+    }
+    
+    #post_operations {
+        @media print {
+            display: none;
+        }
+        margin-top: 20px;
+        ul {
+            padding: 0;
+            
+            li {
+                text-align: center;
+                // Display list items horizontally
+                display: inline;
+                list-style-type: none;
+                padding: 0;
+                margin-right: 5px;
+                a {
+                    @include button;
                 }
             }
         }
