--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -775,6 +775,9 @@ section.hub_column_main {
         
         h1 {
             padding: 0 0 1px 0;
+            @include max-screen(720px) {
+                padding: 0 0 5px 0;
+            }
         }
         
         p {
