--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -776,7 +776,7 @@ section.hub_column_main {
         h1, h2 {
             padding: 0 0 1px 0;
             @include max-screen(720px) {
-                padding: 0 0 5px 0;
+                margin: 0 0 4px 0;
             }
         }
         
