--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -778,6 +778,9 @@ section.hub_column_main {
         
         h1, h2 {
             padding: 0 0 1px 0;
+            @include max-screen(720px) {
+                padding: 0 0 2px 0;
+            }
         }
         
         p {
