--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1339,7 +1339,7 @@ section.column_right_sidebar {
                         font-family: $font_related_post_title;
                         font-size: $font_size_related_post_title;
                         font-weight: bold;
-                        line-height: $font_size_related_post_title;
+                        line-height: $font_size_related_post_title + 2;
                     }
                 }
                 h2, p {
