Test to solve missing site image

--- a/_includes/post_bottom.html
+++ b/_includes/post_bottom.html
@@ -19,7 +19,7 @@
     <div id="post_operations">
         <ul>
             <li><a href="javascript:window.print()">Print</a></li>
-            <li><a href="https://twitter.com/share">Tweet</a></li>
+            <li><a href="https://twitter.com/share" data-via="{{ twitter }}">Tweet</a></li>
         </ul>
     </div>
     <!--
