--- a/_includes/page_left_sidebar.html
+++ b/_includes/page_left_sidebar.html
@@ -16,7 +16,7 @@
             {% capture nowyear  %}{{ 'now' | date: '%Y' }}{% endcapture %}
             {% for post in site.categories['newsbit'] limit:20 %}
                 {% capture postdate %}{{ post.date | date: '%Y-%m-%d' }}{% endcapture %}
-                    {% assign newsbit_content = post.content | remove: '<p>' | remove: '</p>'%}
+                    {% assign newsbit_content = post.excerpt | remove: '<p>' | remove: '</p>'%}
                     {% if newsbit_content != "" %}
                     <div class="newsbit">
                         <p class="date">
