Add right margin for post list items

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -934,6 +934,7 @@ section.post_column_main {
 
     ul, ol {
         @include bottom_margin;
+        margin-right: 30px;
         // Collapse bottom margin of inner 'ul'
         ul, ol {
             margin-bottom: 0px;
