--- a/_includes/post_bottom.html
+++ b/_includes/post_bottom.html
@@ -13,13 +13,22 @@
                 </td>
             </tr>
         </table>
-        
     </p>
 
     <div id="post_operations">
         <ul>
-            <li><a href="javascript:window.print()">Print</a></li>
-            <li><a href="https://twitter.com/share" data-via="{{ twitter }}">Tweet</a></li>
+            <li>
+                <a href="javascript:window.print()">
+                    <i class="fa fa-print fa-lg" aria-hidden="true"></i>&nbsp;
+                    Print
+                </a>
+            </li>
+            <li>
+                <a href="https://twitter.com/share" data-via="{{ twitter }}">
+                    <i class="fa fa-twitter fa-lg" aria-hidden="true"></i>&nbsp;
+                    Tweet
+                </a>
+            </li>
         </ul>
     </div>
     <!--
