--- a/_includes/quotes.html
+++ b/_includes/quotes.html
@@ -18,7 +18,7 @@
                 if (randomUsed.indexOf(randomIndex) == "-1") {
                 
                     document.write("<div class='quote'>");
-                    document.write("<p>" + quote_text[randomIndex] + "</p>");
+                    document.write("<p><i class='fa fa-quote-left fa-lg' aria-hidden='true'></i>&nbsp;&nbsp;" + quote_text[randomIndex] + "</p>");
                     document.write("<table><tr><td>&mdash;&nbsp;</td><td>" + "<p><span class='qauthor'>" + quote_from[randomIndex] + "</span><br/><span class='context'>" + quote_context[randomIndex] + "</span></p></td></tr></table>");
                     document.write("</div>");
                     
