--- a/_includes/head.html
+++ b/_includes/head.html
@@ -45,9 +45,11 @@
     <!-- Stylesheets -->
     <!------------------------------------------------------------------------>
     <!-- <link rel="stylesheet" href="{{ site.baseurl }}/css/styles.css"> -->
+    <link rel="stylesheet" href="{{ site.baseurl }}/css/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="{{ site.baseurl }}/css/pygment_trac.css">
     <link rel="stylesheet" href="{{ site.baseurl }}/css/code.css">
     <!-- Override the default styles with the generated CSS from Sass -->
+    
     <link rel="stylesheet" href="{{ site.baseurl }}/css/overridestyles.css">
     
     <!-- Javascript -->
