--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,7 +21,11 @@
     {% if page.excerpt %}
     <meta name="description" content={{ page.excerpt }} />
     {% else %}
-    <meta name="description" content={{ site.description }} />
+        {% if site.description %}
+        <meta name="description" content={{ site.description }} />
+        {% else %}
+        <meta name="description" content={{ site.tagline }} />
+        {% endif %}
     {% endif %}
 	<meta name="keywords" content="news duterte" />
 	<meta name="robots" content="index, follow" />
