--- a/_sass/font.scss
+++ b/_sass/font.scss
@@ -1,23 +1,14 @@
 
-// Liberation Sans is too narrow
-// Merriweather is good but seems a bit thick
-// Playfair Displaylooks nice in bigger sizes, like titles or headings
+@import url("https://fonts.googleapis.com/css?family=Roboto");
+@import url("https://fonts.googleapis.com/css?family=Droid+Sans");
+@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro");
+@import url("//fonts.googleapis.com/css?family='Liberation Serif':400,400italic,700");
 
-//@import url("//fonts.googleapis.com/css?family=Open Sans");
-//@import url("//fonts.googleapis.com/css?family=PT Serif");
-//@import url("//fonts.googleapis.com/css?family=Droid Serif");
-//@import url("//fonts.googleapis.com/css?family=Roboto Slab");
-@import url("//fonts.googleapis.com/css?family=Roboto");
-//@import url("//fonts.googleapis.com/css?family=Merriweather:400,700");
-//@import url("https://fonts.googleapis.com/css?family=Inconsolata|Lato:400,400italic,700|Merriweather:400");
-@import url("//fonts.googleapis.com/css?family="Liberation Serif":400,400italic,700");
-@import url("//fonts.googleapis.com/css?family=Lato:400, 400italic, 700");
-
-$font_serif:                "Liberation Serif", Garamond, Palatino, "Palatino Linotype", "Times New Roman", Georgia, Times, serif;
+$font_serif:                "Liberation Serif", Palatino, "Palatino Linotype", "Times New Roman", Georgia, Times, serif;
 $font_serif_thin:           "Liberation Serif", Palatino, "Palatino Linotype", "Times New Roman", Georgia, Times, serif;
 
-$font_sans:                 "Lato", Helvetica, "Lucida Sans", Arial, sans-serif;
-$font_sans_thin:            "Roboto", Helvetica, Arial, sans-serif;
+$font_sans:                 "Droid Sans", Helvetica, "Lucida Sans", Arial, sans-serif;
+$font_sans_thin:            "Source Sans Pro", Helvetica, Arial, sans-serif;
 
 $font_monospace:            Consolas, Bitstream Vera Sans Mono, Lucida Console, "Courier New", "Courier", Terminal, monospace;
 
@@ -52,7 +43,6 @@ $font_size_blockquote:          15px;
 $font_line_height_blockquote:   $font_size_blockquote + 4;
 $word_spacing_blockquote:       0.1em;
 
-
 // Add whitespace between words
 // Normal whitespace between is 0.25em
 $word_spacing:              0.155em;
@@ -69,7 +59,7 @@ $font_size_page_nav:        $font_size_nav + 2;
 
 // Label
 $font_label:                $font_sans;
-$font_size_label:           12px;
+$font_size_label:           11px;
 
 // Announcement
 $font_announcement_title:       $font_label;
@@ -130,7 +120,7 @@ $font_aside:                $font_serif_thin;
 $font_size_aside_text:      $font_size_default + 1;
 
 // Footer
-$font_footer:               $font_default;
+$font_footer:               $font_serif_thin;
 $font_size_footer:          13px;
 $font_size_license:         13px;
 
