Use bootstrap tooltip.js

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -53,7 +53,6 @@
     <link rel="stylesheet" href="{{ site.baseurl }}/css/pygment_trac.css">
     <link rel="stylesheet" href="{{ site.baseurl }}/css/code.css">
     <!-- Override the default styles with the generated CSS from Sass -->
-    
     <link rel="stylesheet" href="{{ site.baseurl }}/css/overridestyles.css">
     
     <!-- Javascript -->
@@ -66,6 +65,7 @@
     
     <script src="{{ site.baseurl }}/javascripts/respond.js"></script>
     <script src="{{ site.baseurl }}/javascripts/moment.js"></script>
+    <script src="{{ site.baseurl }}/javascripts/tooltip.js"></script>
     
     <!-- Load Google fonts asynchroneously -->
     <!-- Ref: http://haisum.github.io/2014/11/03/google-fonts-asynchroneous-loading/ -->
