--- a/_includes/post_bottom.html
+++ b/_includes/post_bottom.html
@@ -21,7 +21,7 @@
                 <a href="javascript:window.print()"
                     data-toggle="tooltip" 
                     data-placement="top"
-                    title="Print the page or save as a PDF file"
+                    title="Print the page or save as PDF file"
                 >
                     <i class="fa fa-print fa-lg" aria-hidden="true"></i>&nbsp;
                     Print
