--- a/_sass/mixin.scss
+++ b/_sass/mixin.scss
@@ -116,6 +116,7 @@
         font-size: $font_size_button + 1;
     }
     font-weight: normal;
+    text-align: center;
 
     white-space: nowrap;
     
