--- a/_includes/socmed_links.html
+++ b/_includes/socmed_links.html
@@ -11,8 +11,8 @@
                 data-toggle="tooltip" 
                 data-placement="top"
                 title="{{ item.message }}">
-                <i class="{{ item.fa_icon }}" aria-hidden="true"></i>&nbsp;
-                {{ item.name }}
+                <i class="{{ item.fa_icon }}" aria-hidden="true"></i>
+                <!--<span class="name">{{ item.name }}</span>-->
             </a>
         </li>
     {% endfor %}
