--- a/_includes/post_bottom.html
+++ b/_includes/post_bottom.html
@@ -7,9 +7,13 @@
             <tr>
                 <td><img src="/images/tag.png" height="42" width="42" class="tagsymbol"/></td>
                 <td>
-                    {% for tag in page.tags %}
-                        <span class="tag">{{ tag }}</span>
-                    {% endfor %}
+                    {% if page.tags.size == 0 %}
+                        <span class="tag">no tags</span>
+                    {% else %}
+                        {% for tag in page.tags %}
+                            <span class="tag">{{ tag }}</span>
+                        {% endfor %}
+                    {% endif %}
                 </td>
             </tr>
         </table>
