--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,12 +19,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
     {% if page.excerpt %}
-    <meta name="description" content={{ page.excerpt }} />
+    <meta name="description" content="{{ page.excerpt }}" />
     {% else %}
         {% if site.description %}
-        <meta name="description" content={{ site.description }} />
+        <meta name="description" content="{{ site.description }}" />
         {% else %}
-        <meta name="description" content={{ site.tagline }} />
+        <meta name="description" content="{{ site.tagline }}" />
         {% endif %}
     {% endif %}
 	<meta name="keywords" content="news duterte" />
