--- a/_includes/common_menu.html
+++ b/_includes/common_menu.html
@@ -9,11 +9,23 @@
 -->
 <ul>
 {% for item in site.data.nav %}
+    {% if item.mode != "dev" %}
     <li>
         <a href="{{ item.link }}"  {% if page.url == nav_item.link %} class="active" {% endif %}>
             <i class="{{ item.fa_icon }}" aria-hidden="true"></i>
             <span class="name">{{ item.name }}</span>
         </a>
     </li>
+    {% endif %}
+{% endfor %}
+{% for item in site.data.nav %}
+    {% if item.mode == "dev" %}
+    <li>
+        <a href="{{ item.link }}"  {% if page.url == nav_item.link %} class="active" {% endif %}>
+            <i class="{{ item.fa_icon }}" aria-hidden="true"></i>
+            <span class="name">{{ item.name }}</span>
+        </a>
+    </li>
+    {% endif %}
 {% endfor %}
 </ul>
