Do not display people and org pages in production

--- a/_includes/common_menu.html
+++ b/_includes/common_menu.html
@@ -18,14 +18,18 @@
     </li>
     {% endif %}
 {% endfor %}
-{% for item in site.data.nav %}
-    {% if item.mode == "dev" %}
-    <li>
-        <a href="{{ item.link }}"  {% if page.url == nav_item.link %} class="active" {% endif %}>
-            <i class="{{ item.fa_icon }}" aria-hidden="true"></i>
-            <span class="name">{{ item.name }}</span>
-        </a>
-    </li>
-    {% endif %}
-{% endfor %}
+
+{% if site.development == true %}
+    {% for item in site.data.nav %}
+        {% if item.mode == dev %}
+        <li>
+            <a href="{{ item.link }}"  {% if page.url == nav_item.link %} class="active" {% endif %}>
+                <i class="{{ item.fa_icon }}" aria-hidden="true"></i>
+                <span class="name">{{ item.name }}</span>
+            </a>
+        </li>
+        {% endif %}
+    {% endfor %}
+{% endif %}
+
 </ul>
