Fix display of 'dev' navigation links

--- a/_includes/common_menu.html
+++ b/_includes/common_menu.html
@@ -21,7 +21,7 @@
 
 {% if site.development == true %}
     {% for item in site.data.nav %}
-        {% if item.mode == dev %}
+        {% if item.mode == "dev" %}
         <li>
             <a href="{{ item.link }}"  {% if page.url == nav_item.link %} class="active" {% endif %}>
                 <i class="{{ item.fa_icon }}" aria-hidden="true"></i>
