--- a/_includes/head.html
+++ b/_includes/head.html
@@ -100,6 +100,18 @@
         ga('create', 'UA-79666925-1', 'auto');
         ga('send', 'pageview');
     </script>
+    
+    <script src="{{ site.baseurl }}/javascripts/jquery.rss.js"></script>
+    
+    <script>
+        jQuery(function($) {
+            $("#rssfeeds").rss("{{ page.rss }}",
+                {
+                    entryTemplate:"<div class='rssfeed'><a href='{url}'>{title}</a><p>{shortBodyPlain}</p></div>"
+                }
+            )
+        })
+    </script>
 
     <!--[if lt IE 9]>
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
